--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">DestinyGuns</string>
-    <string name="add_user">Add User</string>
+    <string name="settings">Settings</string>
 </resources>
