--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Destiny Guns</string>
-    <string name="settings">Settings</string>
+
+    <string name="logout">Logout</string>
+
+    <string name="SHARED_PREFS">edu.uw.connerjm.destinyguns.PREFS</string>
+    <string name="LOGGED_IN">loggedin</string>
 </resources>
