--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="SHARED_PREFS">edu.uw.connerjm.destinyguns.PREFS</string>
     <string name="LOGGED_IN">loggedin</string>
 
-    <string name="refine">Refine the weapons you wish to view.</string>
+    <string name="refine">Choose a custom list to view or\n use the drop boxes to refine your search.</string>
     <string name="logout">Logout</string>
     <string name="register_new_user">Register New User</string>
     <string name="email">Please enter your email*</string>
@@ -20,6 +20,9 @@
         Password must be at least 6 characters in length.</string>
     <string name="login_failure">Unable to login. Retype your email and password or
         choose to register.</string>
+    <string name="bug_report">Submit a bug report</string>
+    <string name="choose_list">View Selected List</string>
+    <string name="refine_weapons">Refine the List</string>
 
     <string name="info_paragraph1">Destiny Guns was created by Khaos Studios. We are Conner Martin
         and Robert Gillis. It was created as a project for mobile app development and databases
@@ -40,21 +43,24 @@
         <item>Playstation Four</item>
     </string-array>
     <string-array name="list_spinner">
-        <item>All</item>
+        <item>Select a List</item>
         <item>Favourites</item>
         <item>Owned</item>
         <item>Wishlist</item>
     </string-array>
     <string-array name="rarity_spinner">
+        <item>Select a Rarity</item>
         <item>Legendary</item>
         <item>Exotic</item>
     </string-array>
-    <string-array name="weapons_slot_spinner">
+    <string-array name="slot_spinner">
+        <item>Select an Equip Slot</item>
         <item>Primary</item>
         <item>Special</item>
         <item>Heavy</item>
     </string-array>
-    <string-array name="gun_type_spinner">
+    <string-array name="type_spinner">
+        <item>Select a Weapon Type</item>
         <item>Auto Rifle</item>
         <item>Hand Cannon</item>
         <item>Scout Rifle</item>
