Added the ability to get the list of weapons from the lists the user creates. As of right now, it is set to my username and needs to be switched to the actual users.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
         <item>Fusion Rifle</item>
         <item>Sniper Rifle</item>
         <item>Shotgun</item>
+        <item>Sidearm</item>
         <item>Machine Gun</item>
         <item>Rocket Launcher</item>
         <item>Sword</item>
