Implimented the call to server and parsing json. It doesnt work completely. For some reason, it will not work if the gun title has a space in it. and it doesn't get the stats and gatedfor for whatever reason.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="choose_list">View Selected List</string>
     <string name="refine_weapons">Refine the List</string>
     <string name="not_valid">Not a valid slot and weapon type combination.</string>
-    <string name="fav">Favourite</string>
+    <string name="fav">Fav</string>
     <string name="owned">Owned</string>
     <string name="wishlist">Wishlist</string>
     <string name="stats">\t\tStats-</string>
