Changed the way the app downloads the url and recieves that json in the weapon list fragment because the json was being truncated. spinners now work for all, rarity/type, and rarity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,9 +42,9 @@
         our application for entertainment and educational purposes.</string>
     <string name="info_paragraph2">As is the nature of this app is statistic based and Bungie will
         continue to support this ever-changing game, There will undoubtedly be misinformation that
-        we, the devs, will have not intended. If you find any information that is incorrect, please
-         email the CEO of Khaos Studios at connerjm@uw.edu, or follow the steps of filling a bug
-        report below.</string>
+        we, the devs, will have not intended. If you find any information that is incorrect, or
+        maybe a weapon that you want added, please email the CEO of Khaos Studios at
+        connerjm@uw.edu, or follow the steps of filling a bug report below.</string>
     <string name="bug_report_paragraph">To send the devs a bug report, click anywhere along this
         message to be taken to your mail app and email us a detailed description on the bug or
         misinformation that you have found, most importantly including how to recreate the bug.</string>
