Created an xml file for a number picker dialog for voting on rank. Also created and hosted the php for updating a weapons rank.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,11 +28,10 @@
     <string name="choose_list">View Selected List</string>
     <string name="refine_weapons">Refine the List</string>
     <string name="not_valid">Not a valid slot and weapon type combination.</string>
-    <string name="fav">Fav</string>
-    <string name="owned">Owned</string>
-    <string name="wishlist">Wishlist</string>
     <string name="stats">\t\tStats-</string>
     <string name="details">\t\tDetails-</string>
+    <string name="cancel">Cancel</string>
+    <string name="rate">Rate</string>
 
     <!-- PHAT strings. -->
     <string name="info_paragraph1">Destiny Guns was created by Khaos Studios. We are Conner Martin
